# rgbd-object-tracking

./: CMakeLists.txt  README.md  package.xml
Object tracking GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  objtrackGUI.pro  objtrackGUI.pro.user.25cb445.4.8-pre1  openni2_launch.sh  roscore.sh  rosnode_kill_script.sh  runpy.sh  rviz.sh  tracking_script.sh
PCD model files/: ball.pcd  mug.pcd
src/: filtering.cpp  tracking.cpp
